tests/ui/internal_registry.stderr
error[E0603]: module `registry` is private
 --> tests/ui/internal_registry.rs:1:24
  |
1 | use moirai::component::registry;
  |                        ^^^^^^^^ private module
  |
note: the module `registry` is defined here
 --> src/component/mod.rs
  |
  | mod registry;
  | ^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/internal_registry.rs:1:33
  |
1 | use moirai::component::registry;
  |                                 ^ consider adding a `main` function to `$DIR/tests/ui/internal_registry.rs`
